# oh-queue

./: Cargo.toml
src/: main.rs  queue.rs  server.rs  util.rs  utils.rs
src/public/: done.html  index.html  styles.css  waiting.html
