[package]
name = "oh-queue"
version = "0.1.0"
authors = ["Sid <ssabhnani@utexas.edu>"]
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-web = "4.7.0"
crossterm = "0.27.0"
dirs = "5.0.1"
ratatui = "0.26.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
structopt = "0.3.26"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "full"] }
uuid = { version = "1.8.0", features = ["v4"] }
